[package]
name = "kinglet"
version = "0.1.0"
authors = ["Pyfisch <pyfisch@gmail.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
httparse = "*"
hyper = "*"
mio = "*"
netbuf ={ git = "git://github.com/pyfisch/netbuf", rev = "5167b36780370724" }
rotor = { git = "git://github.com/tailhook/rotor" }
unicase = "*"
url = "*"
time = "*"
multimap = { git = "git://github.com/havarnov/multimap" }
