[package]
name = "kinglet"
version = "0.2.0"
authors = ["Pyfisch <pyfisch@gmail.com>"]

[dependencies]
httparse = "1.2.1"
httpdate = "0.2.0"
httptypes = { git = "https://github.com/pyfisch/httptypes" }
tokio-core = "0.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
